# advanced-shortcut

./: README.md  UI_DESIGN_SPECIFICATION.md  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CreateDesktopShortcutModal.tsx  ShortcutEditor.tsx  UpdateModal.tsx
src/components/common/: FormElements.tsx  IconPicker.tsx  Modal.tsx  index.ts
src/components/layout/: PageContainer.tsx  Sidebar.tsx  TitleBar.tsx  index.ts
src/components/pages/: AboutPage.tsx  GroupsPage.tsx  SettingsPage.tsx  ShortcutsPage.tsx  index.ts
src/hooks/: useAppData.ts  useUpdater.ts
src/types/: index.ts
